added text-colors, background-colors, mixin/concat, vars/config

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "npm run sass",
     "sassdoc-build": "sassdoc src/**/* --config ./.sassdoc.json",
     "sassdoc": "npm run sassdoc-build && open ./docs/sassdoc/index.html",
+    "prettier": "npm run prettier src/**/* --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
